--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,49 +1,105 @@
 
 body{
     background-color:white;
-    font-family:serif ;  
-     
-
-}
-.container{
-    position :relative;
-    size: 75;
-    margin-top: 100px;
-    margin-left: 40px;
-    width: 800;
+    font-family:serif ;
 }
 
-.container-info{
+*{
+    border: 1px solid yellow;
+    margin: 0; 
+    padding: 0;
+}
+
+
+a{
+    text-decoration: none;
+}
+
+href:hover{
+    background-color: lime;
 
 }
 
-h5 span{
+strong{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: lightgreen;
+
+}
+p{
+    font-size: x-large;
+    width: 900;   
+    margin-bottom: 25px; 
+}
+
+p span{
     color: #CDB6B1;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-h2 span{
-    color: rgb(0, 153, 255);
+div{
+    padding-left: 20px;    
+    width: 1200;    
 }
 
+div p{
+    width: 1200;    
+}
 
+div .baseDeDatosInfo{
+    background-color: rgb(223, 213, 213);
+}
 footer {
     width: 100%;
     height: 81px;
     position: absolute;
     bottom: 0;
-    left: 90px;
+    margin-left: 40px;
 }
 
 footer img{
 	position: relative;
 	max-width: 100%;
-    margin-bottom: 2rem;
     margin-left: 20px;
 }
 
 
-img{
-    position: relative;
-	max-width: 100%;
+.container{
+    position :relative;
+    size: 75;
+    margin-top: 70px;
+    margin-left: 40px;
+    width: 800;
+    margin-bottom: 40px;
 }
+
+.container-info{
+    margin-left:40px ;
+}
+
+.container-info h2{
+    font-style: oblique;
+    color:rgb(70, 42, 42);
+}
+
+.info{
+    width: 400;
+    font-size: x-large;    
+}
+
+.info span{
+    color: rgb(161, 180, 192);
+    font-style: italic;   
+    
+}
+
+
+#footerSection{
+    margin-bottom: 5px;
+    margin-top: 8px;
+}   
+
+#footerSection p{
+    font-size: medium  ;
+}
+
+
