--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,22 +1,46 @@
 
 body{
     background-color:white;
-    font-family:serif ;
+    font-family:'Work Sans', sans-serif; 
+    color: rgb(61, 59, 59);
 }
 
 *{
-   /* border: 1px solid yellow;*/
+    border: 1px solid yellow;
     margin: 0; 
     padding: 0;
 }
 
+@keyframes animated{
+	0% { transform: translateY(40px); opacity: 0;}
+	100% { transform: translateY(0); opacity: 1;}
+
+}
+.animated{
+	position: relative;
+	opacity: 0;
+}
+.animated.active{
+	animation: animated 1s forwards;
+}
+
+.overlay{
+	position: fixed; top: 0; left: 0;
+	width: 100%; height: 100%;
+	background-color: white;
+	z-index: 99;
+	transition: 1s linear;
+}
+.overlay.active{
+	transform: translateY(-100%);
+}
 
 a{
     text-decoration: none;
 }
 
 href:hover{
-    background-color: lime;
+    background-color: rgb(17, 19, 17);
 
 }
 
@@ -25,11 +49,13 @@ strong{
     background-color: lightgreen;
 
 }
+
 p{
     font-size: x-large;
     width: 900;   
     margin-bottom: 25px; 
 }
+
 
 p span{
     color: #CDB6B1;
@@ -62,6 +88,18 @@ footer img{
     margin-left: 20px;
 }
 
+.info.animated {
+    animation: animated 1s forwards;
+    animation-duration: 1s;
+    animation-timing-function: ease;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: forwards;
+    animation-play-state: running;
+    animation-name: animated;
+}
+
 
 .container{
     position :relative;
@@ -80,10 +118,14 @@ footer img{
     font-style: oblique;
     color:rgb(70, 42, 42);
 }
+.container h2{
+    margin-top:20px;
+}
+
 
 .info{
-    width: 400;
-    font-size: x-large;    
+    width: 900;
+    font-size: xx-large;    
 }
 
 .info span{
